added signal chain flowchart using tikz, reorganized slightly

--- a/report.bib
+++ b/report.bib
@@ -1,132 +1,135 @@
 
 @book{aip,
-	author = "Wong, George S.K.; Embleton, Tony F.W.",
-	title = "AIP Handbook of Condenser Microphones: Theory, Calibration and Measurements"
-	
+	author = {Wong, George S.K.; Embleton, Tony F.W.},
+	title = {AIP Handbook of Condenser Microphones: Theory, Calibration and Measurements},
+	ISBN = {1563962845},
+	year = {1997},
+	publisher = {American Institute of Physics},
+	address = {500 Sunnyside Boulevard, Woodbury, NY 11797-2999}
 }
 	
 
 @incollection{schomburg,
-	author = "Schomburg, Werner K.",
-	title = "Membranes",
-	booktitle = "Introduction to Microsystem Design",
-	year = "2011",
-	pages = "29--50",
-	address = "Berlin",
-	publisher = "Springer-Verlag"
+	author = {Schomburg, Werner K.},
+	title = {Membranes},
+	booktitle = {Introduction to Microsystem Design},
+	year = {2011},
+	pages = {29--50},
+	address = {Berlin},
+	publisher = {Springer-Verlag}
 }
 
 @article{sessler,
-	author = "Sessler, Gerhard M.",
-	title = "Electrostatic Microphones with Electret Foil",
-	journal = "Journal of the Acoustical Society of America",
-	year = "1963",
+	author = {Sessler, Gerhard M.},
+	title = {Electrostatic Microphones with Electret Foil},
+	journal = {Journal of the Acoustical Society of America},
+	year = {1963},
 	month = 9,
-	pages = "1354--1357"
+	pages = {1354--1357}
 }
 
 @book{sessler2,
-	author = "Sessler, Gerhard M.; Gerhard-Multhaupt, R.",
-	title = "Electrets",
-	edition = "Third",
-	year = "1999",
-	address = "Morgan Hill, California, USA",
-	publisher = "Laplacian Press",
-	ISBN = "1-885540-07-8"
+	author = {Sessler, Gerhard M.; Gerhard-Multhaupt, R.},
+	title = {Electrets},
+	edition = {Third},
+	year = {1999},
+	address = {Morgan Hill, California, USA},
+	publisher = {Laplacian Press},
+	ISBN = {1-885540-07-8}
 }
 
 @article{streicher,
-	author = "Streicher, Ron and Dooley, Wes",
-	title = "The Bidirectional Microphone: A Forgotten Patriarch",
-	journal = "Journal of the Audio Engineering Society",
-	year = "2003",
-	pages = "211--215"
+	author = {Streicher, Ron and Dooley, Wes},
+	title = {The Bidirectional Microphone: A Forgotten Patriarch},
+	journal = {Journal of the Audio Engineering Society},
+	year = {2003},
+	pages = {211--215}
 }
 
 @inproceedings{torio,
-	author = "Torio, Guy and Segota, Jeff",
-	title = "Unique Directional Properties of Dual-Diaphragm Microphones",
-	address = "Evanston, Illinois 60202, USA",
-	organization = "Audio Engineering Society",
-	institution = "Shure Inc.",
-	year = "2000",
+	author = {Torio, Guy and Segota, Jeff},
+	title = {Unique Directional Properties of Dual-Diaphragm Microphones},
+	address = {Evanston, Illinois 60202, USA},
+	organization = {Audio Engineering Society},
+	institution = {Shure Inc.},
+	year = {2000},
 	month = 9,
-	number = "5179",
-	url = "http://www.aes.org/sections/chicago/AES_LA_6_21_00.PDF"
+	number = {5179},
+	url = {http://www.aes.org/sections/chicago/AES_LA_6_21_00.PDF}
 }
 
 @book{smith,
-	author = "Smith, Steven W.",
-	title = "The Scientist and Engineer's Guide to Digital Signal Processing",
-	ISBN = "0-9660176-3-3",
-	edition = "First",
-	year = "1997",
-	publisher = "California Technical Publishing",
-	address = "San Diego, CA 92150-2407, USA"
+	author = {Smith, Steven W.},
+	title = {The Scientist and Engineer's Guide to Digital Signal Processing},
+	ISBN = {0-9660176-3-3},
+	edition = {First},
+	year = {1997},
+	publisher = {California Technical Publishing},
+	address = {San Diego, CA 92150-2407, USA}
 }
 
 %%%
 
 @online{boyer,
-	author = "Boyer, Mark",
-	title = "10 Types of Microphones",
-	year = "2000",
+	author = {Boyer, Mark},
+	title = {10 Types of Microphones},
+	year = {2000},
 	month = 4,
-	url = "http://electronics.howstuffworks.com/gadgets/audio-music/question309.htm",
-	urldate = "2014-02-24"
+	url = {http://electronics.howstuffworks.com/gadgets/audio-music/question309.htm},
+	urldate = {2014-02-24}
 }
 
 @online{nave,
-	author = "Nave, Rob",
-	title = "Microphones",
-	year = "2000",
-	url = "http://hyperphysics.phy-astr.gsu.edu/hbase/audio/mic.html",
-	urldate = "2014-02-24"
+	author = {Nave, Rob},
+	title = {Microphones},
+	year = {2000},
+	url = {http://hyperphysics.phy-astr.gsu.edu/hbase/audio/mic.html},
+	urldate = {2014-02-24}
 }
 
 @online{shambro,
-	author = "Shambro, Joe",
-	title = "Condenser vs. Dynamic Microphones",
-	year = "2014",
-	url = "http://homerecording.about.com/od/microphones101/a/mic_types.htm",
-	urldate = "2014-02-24"
+	author = {Shambro, Joe},
+	title = {Condenser vs. Dynamic Microphones},
+	year = {2014},
+	url = {http://homerecording.about.com/od/microphones101/a/mic_types.htm},
+	urldate = {2014-02-24}
 }
 
 @online{white,
-	author = "White, Paul",
-	title = "Mic Types \& Characteristics",
-	year = "1998",
+	author = {White, Paul},
+	title = {Mic Types \& Characteristics},
+	year = {1998},
 	month = 4,
-	url = "http://www.soundonsound.com/sos/apr98/articles/mic_types.html",
-	urldate = "2014-02-24",
+	url = {http://www.soundonsound.com/sos/apr98/articles/mic_types.html},
+	urldate = {2014-02-24},
 	publisher = {{Sound On Sound}}
 }
 
 @online{oktava,
 	author = {{Oktava GmbH}},
-	title = "Oktava MK-319 condenser microphone",
-	url = "http://www.oktava-online.com/mk319.htm",
-	urldate = "2014-04-20",
+	title = {Oktava MK-319 condenser microphone},
+	url = {http://www.oktava-online.com/mk319.htm},
+	urldate = {2014-04-20},
 	publisher = {{Oktava GmbH}},
-	year = "2014"
+	year = {2014}
 }
 
 @online{shure,
 	author = {{Shure Inc.}},
 	title = {{SM58 Vocal Microphone}},
-	url = "http://www.shure.com/americas/products/microphones/sm/sm58-vocal-microphone",
-	urldate = "2014-04-20",
+	url = {http://www.shure.com/americas/products/microphones/sm/sm58-vocal-microphone},
+	urldate = {2014-04-20},
 	publisher = {{Shure Incorporate}},
-	year = "2014"
+	year = {2014}
 }
 
 @manual{Bruel,
 	author = {{Brüel \& Kjær}},
-	title = "Microphone Handbook, Vol. 1: Theory",
+	title = {Microphone Handbook, Vol. 1: Theory},
 	publisher = {{Brüel \& Kjær}},
-	year = "1996",
-	address = "Nærum, Denmark",
-	number = "BE 1447–11",
-	url = "http://www.bksv.com/doc/be1447.pdf",
-	urldate = "2014-04-29"
+	year = {1996},
+	address = {Nærum, Denmark},
+	number = {BE 1447–11},
+	url = {http://www.bksv.com/doc/be1447.pdf},
+	urldate = {2014-04-29}
 }
