--- a/report.tex
+++ b/report.tex
@@ -85,6 +85,7 @@
 \usepackage{array}
 \usepackage{mdwmath}
 \usepackage{mdwtab}
+\usepackage{float}
 
 
 
@@ -234,6 +235,8 @@
 \addbibresource{IEEEabrv,report}
 
 \usepackage{graphicx}
+\usepackage{tikz}
+\usetikzlibrary{arrows,positioning,shapes.geometric}
 
 
 % *** Do not adjust lengths that control margins, column widths, etc. ***
@@ -328,20 +331,58 @@ A variety of devices exist for transducing sound. Of commercially viable designs
 
 \begin{figure}[ht]
   \centering
-	\includegraphics[scale=0.4]{DiaphragmSystem.png}
+	\includegraphics[scale=0.5]{DiaphragmSystem.png}
   \caption{\em Diaphragm system vertical cross-section~\supercite{torio}}
 	\label{fig:DiaphragmSystem}
 \end{figure}
 
 \section{Sensor Structure and Measurement Principle}
 
-Condenser microphones work by converting sound pressure into a change in capacitance across a DC-biased condenser. The condenser has a diaphragm membrane that can be deflected by sound pressure. When sound causes membrane deflection, the capacitance of the condenser varies. This capacitance delta produces a corresponding change in voltage on the circuit the condenser is tied to. The resultant AC small-signal can then be extracted from the microphone circuit to obtain a voltage representation of the source sound.
+\begin{figure}[ht]
+	\centering
+	\begin{tikzpicture}[auto, node distance=2cm,>=latex']
+		\tikzstyle{round4} = [rectangle, draw, rounded corners, text centered, minimum height=2em, minimum width=10em, node distance=4.5cm]
+		\tikzstyle{round1} = [rectangle, draw, rounded corners, text centered, minimum height=2em, minimum width=10em, node distance=1.25cm]
+		\tikzstyle{header} = [draw=none, text centered, node distance=0.75cm]
+		\tikzstyle{arrow} = [thick,->,>=stealth]
+		
+		\node (mechanical) [header, above of=sound] {\bf Mechanical};
+		\node (electrical) [header, right of=mechanical, node distance=4.5cm] {\bf Electrical};
+		\node (sound) [round1] {sound pressure};
+		\node (gradient) [round1, below of=sound] {pressure gradient};
+		\node (deflection) [round1, below of=gradient] {membrane deflection};
+		\node (capacitance) [round4, right of=sound] {$\Delta$ capacitance};
+		\node (voltage) [round4, right of=gradient] {$\Delta$ voltage};
+		\node (preamp) [round4, right of=deflection] {preamplifier};
+		
+		\draw [arrow] (sound) -- (gradient);
+		\draw [arrow] (gradient) -- (deflection);
+		\draw [arrow] (deflection) -- (2.25,-2.5) -- (2.25,0) -- (capacitance);
+		
+		\draw [arrow] (capacitance) -- (voltage);
+		\draw [arrow] (voltage) -- (preamp);
+	\end{tikzpicture}
+	\caption{\em Transducer signal chain, first the mechanical process, then the coupled electrical response}
+	\label{fig:SignalChain}
+\end{figure}
 
 The diaphragm portion of the condenser microphone has a cylindrical form-factor. Its vertical cross-section is depicted in Fig. \ref{fig:DiaphragmSystem}. The diaphragm itself is a thin, tensioned membrane which is responsive to sound pressure in the target frequency range. The back-plate is a rigid structure with distributed holes leading to an internal cavity. Between the membrane and the back-plate is the air-gap which forms the condenser dielectric. An acoustic resistance at the rear of the internal cavity serves as a normalizing vent, allowing the cavity to equalize to atmospheric pressure.
+
+Condenser microphones convert sound pressure into a voltage signal by the process shown in Fig. \ref{fig:SignalChain}. In the process, sound pressure gives rise to a pressure gradient which causes deflection across the condenser diaphragm. Membrane deflection in turn  causes the capacitance of the condenser to vary. Variations in capacitance produce corresponding changes in voltage on the biasing circuit the condenser is tied to. The resultant AC small-signal can then be extracted from the circuit and fed through a preamplifier to obtain a low output impedance voltage signal representing the source sound.
 
 \begin{figure}[ht]
 	\centering
 	\includegraphics[scale=0.35]{MembraneDeflection.png}
+	
+	\begin{equation}
+		\Delta p = \frac{4w_0 d_m}{R_M^2} \frac{E_M}{1-v_M^2} \left( \frac{4}{3} \frac{d_M^2}{R_M^2} + \sigma_0 + \frac{64}{105} \frac{w_0^2}{R_M^2} \right)
+		\label{eq:Apex}
+	\end{equation}
+	
+	\begin{equation}
+		w(r) = w_0\left(1-\frac{r^2}{R_M^2}\right)
+		\label{eq:Deflection}
+	\end{equation}
 	
 	\begin{tabular}{ c | l }
 		\hline
@@ -349,12 +390,16 @@ The diaphragm portion of the condenser microphone has a cylindrical form-factor.
 		\hline
 		$r$ & radius in cylindrical coordinates \\
 		$R_M$ & membrane radius \\
+		$d_M$ & membrane thickness \\
 		$w$ & deflection along $z$-axis at a particular radius \\
 		$w_0$ & apex of deflection, equal to $w(r=0)$ \\
 		$P_0$ & atmospheric pressure \\
 		$\Delta p$ & change in pressure relative to $P_0$ caused by sound \\
 		$F_{p,z}$ & force due to uniform pressure across membrane \\
 		$F_{f,z}$ & force due to membrane tension and frame \\
+		$\sigma_0$ & residual stress, modeled with $\sigma_0=0$ \\
+		$E_M$ & Young's Modulus of elasticity for the membrane \\
+		$v_M$ & Poisson's ratio for the membrane \\
 	\end{tabular}
 	
 	\caption{\em Modeled parabolic membrane deflection owing to uniform sound pressure\supercite{schomburg}}
@@ -363,53 +408,28 @@ The diaphragm portion of the condenser microphone has a cylindrical form-factor.
 
 \subsection{Membrane Deflection}
 
-When sound pressure impinges upon the membrane, it oscillates with the pressure according to its mechanical properties. Fig. \ref{fig:MembraneDeflection} shows modeled parabolic deflection in cylindrical coordinates. The modeled parabolic deflection assumes sound pressure is uniformly distributed across the face of the membrane. This produces purely vertical membrane oscillation along the $z$-axis in cylindrical coordinates, with the apex deflection $w_0$ occurring at the center of the membrane owing to the maximized moment arm at that point.
+When sound pressure impinges upon the membrane, it oscillates with the pressure according to its mechanical properties. Fig. \ref{fig:MembraneDeflection} shows modeled parabolic deflection in cylindrical coordinates. The model assumes sound pressure is uniformly distributed across the face of the membrane. This produces purely vertical membrane oscillation along the $z$-axis in cylindrical coordinates, with the apex deflection $w_0$ occurring at the center of the membrane owing to the maximized moment arm at that point.
 
-Setting residual stress $\sigma_0=0$, we can solve for the apex deflection using the relation\supercite{schomburg}:
-
-\begin{figure}[ht]
-	\begin{equation}
-		\Delta p = \frac{4w_0 d_m}{R_M^2} \frac{E_M}{1-v_M^2} \left( \frac{4}{3} \frac{d_M^2}{R_M^2} + \sigma_0 + \frac{64}{105} \frac{w_0^2}{R_M^2} \right)
-		\label{eq:Apex}
-	\end{equation}
-
-	\begin{tabular}{ c | l }
-		\hline
-		\bf Symbol & \bf Description \\
-		\hline
-		$\sigma_0$ & residual stress, modeled with $\sigma_0=0$ \\
-		$E_M$ & Young's Modulus of elasticity for the membrane \\
-		$v_M$ & Poisson's ratio for the membrane \\
-	\end{tabular}
-	\label{eq:ApexPressureRel}
-\end{figure}
-
-The apex deflection $w_0$ can then be used to calculate the modeled parabolic deflection at any radius $r$ using:
-
-\begin{figure}[ht]
-	\begin{equation}
-		w(r) = w_0\left(1-\frac{r^2}{R_M^2}\right)
-		\label{eq:Deflection}
-	\end{equation}
-\end{figure}
+Setting residual stress $\sigma_0=0$, we can solve for the apex deflection using the relation shown in Eq. \ref{eq:Apex}\supercite{schomburg}. The apex deflection $w_0$ can then be used to calculate the modeled parabolic deflection at any radius $r$ with Eq. \ref{eq:Deflection}.
 
 \subsection{Capacitance}
 
-Let the back-plate be held at $z=h_0$ above the membrane to create the dielectric air-gap. Assume the membrane has a positive apex deflection $w_0>0$ and is deflected up towards the back-plate due to sound pressure. If we treat the face of the membrane as a collection of cylindrical area differentials with $dA = r\,dr\,d\theta$ we can find the total capacitance under deflection by integrating the differential capacitances $dC$:
+Let the back-plate be held at $z=h_0$ above the membrane to create the dielectric air-gap. Assume there is sound pressure and the membrane has a positive apex deflection $w_0>0$ and is deflected up towards the back-plate. If we treat the face of the membrane as a collection of cylindrical area differentials with $dA = r\,dr\,d\theta$ we can find the total capacitance under deflection by integrating the differential capacitances $dC$ as shown in Eq. \ref{eq:DifferentialCapacitance} and \ref{eq:DeflectedCapacitance}.
 
 \begin{figure}[ht]
 	\begin{equation}
 		\int_A dC = \int_A \frac{\epsilon_0\,dA}{h_0-w(r)} %= \int_0^{R_M} \int_0^{2\pi} \frac{\epsilon_0 r}{h_0-w(r)}\,d\theta\,dr
-		\label{eq:DiffCap}
+		\label{eq:DifferentialCapacitance}
 	\end{equation}
 	
 	\begin{equation}
 		C = \frac{\pi\epsilon_0 R_M^2}{w_0} \mathrm{ln}\left(\frac{h_0}{h_0-w_0}\right)
-		\label{eq:DefCap}
+		\label{eq:DeflectedCapacitance}
 	\end{equation}
 \end{figure}
 
-Negative apex deflection $w_0<0$ indicates deflection \emph{away} from the back-plate and produces the expression $h_0+w_0$ in the denominator of the natural logarithm.
+
+%Negative apex deflection $w_0<0$ indicates deflection \emph{away} from the back-plate and produces the expression $h_0+|w_0|$ in the denominator of the natural logarithm.
 
 \subsection{Voltage}
 
@@ -520,21 +540,21 @@ The conclusion goes here.
 %
 
 
-\appendices
-\section{Proof of the First Zonklar Equation}
-Appendix one text goes here.
+%\appendices
+%\section{Proof of the First Zonklar Equation}
+%Appendix one text goes here.
 
 % you can choose not to have a title for an appendix
 % if you want by leaving the argument blank
-\section{}
-Appendix two text goes here.
+%\section{}
+%Appendix two text goes here.
 
 
 % use section* for acknowledgement
-\section*{Acknowledgment}
+%\section*{Acknowledgment}
 
 
-The authors would like to thank...
+%The authors would like to thank...
 
 
 % Can use something like this to put references on a page
