integrated James' deflection/interface circuit diagram, replaced former membrane deflection diagram

--- a/report.bib
+++ b/report.bib
@@ -123,7 +123,7 @@
 	year = {2014}
 }
 
-@manual{Bruel,
+@manual{bruel,
 	author = {{Brüel \& Kjær}},
 	title = {Microphone Handbook, Vol. 1: Theory},
 	publisher = {{Brüel \& Kjær}},
