--- a/report.tex
+++ b/report.tex
@@ -237,6 +237,8 @@
 \usepackage{graphicx}
 \usepackage{tikz}
 \usetikzlibrary{arrows,positioning,shapes.geometric}
+\usepackage[nodisplayskipstretch]{setspace}
+
 
 
 % *** Do not adjust lengths that control margins, column widths, etc. ***
@@ -342,13 +344,13 @@ A variety of devices exist for transducing sound. Of commercially viable designs
 	\centering
 	\begin{tikzpicture}[auto, node distance=2cm,>=latex']
 		\tikzstyle{round4} = [rectangle, draw, rounded corners, text centered, minimum height=2em, minimum width=10em, node distance=4.5cm]
-		\tikzstyle{round1} = [rectangle, draw, rounded corners, text centered, minimum height=2em, minimum width=10em, node distance=1.25cm]
+		\tikzstyle{round1} = [rectangle, draw, rounded corners, text centered, minimum height=2em, minimum width=10em, node distance=1cm]
 		\tikzstyle{header} = [draw=none, text centered, node distance=0.75cm]
 		\tikzstyle{arrow} = [thick,->,>=stealth]
 		
-		\node (mechanical) [header, above of=sound] {\bf Mechanical};
+		\node (mechanical) [header] {\bf Mechanical};
 		\node (electrical) [header, right of=mechanical, node distance=4.5cm] {\bf Interface Circuit};
-		\node (sound) [round1] {sound pressure};
+		\node (sound) [round1, below of=mechanical] {sound pressure};
 		\node (gradient) [round1, below of=sound] {pressure gradient};
 		\node (deflection) [round1, below of=gradient] {membrane deflection};
 		\node (capacitance) [round4, right of=sound] {$\Delta$ capacitance};
@@ -357,7 +359,7 @@ A variety of devices exist for transducing sound. Of commercially viable designs
 		
 		\draw [arrow] (sound) -- (gradient);
 		\draw [arrow] (gradient) -- (deflection);
-		\draw [arrow] (deflection) -- (2.25,-2.5) -- (2.25,0) -- (capacitance);
+		\draw [arrow] (deflection) -- (2.25,-3) -- (2.25,-1) -- (capacitance);
 		
 		\draw [arrow] (capacitance) -- (voltage);
 		\draw [arrow] (voltage) -- (preamp);
@@ -378,7 +380,6 @@ Condenser microphones convert sound pressure into a change in capacitance by the
 \end{figure*}
 
 \begin{figure}[ht]
-	\centering	
 	\begin{equation}
 		\Delta p = \frac{4w_0 d_m}{R_M^2} \frac{E_M}{1-v_M^2} \left( \frac{4}{3} \frac{d_M^2}{R_M^2} + \sigma_0 + \frac{64}{105} \frac{w_0^2}{R_M^2} \right)
 		\label{eq:Apex}
@@ -390,14 +391,22 @@ Condenser microphones convert sound pressure into a change in capacitance by the
 	\end{equation}
 	
 	\begin{equation}
+		C_0 = \frac{\epsilon_0\pi R_M^2}{h_0}
+		\label{eq:Cknot}
+	\end{equation}
+	
+	\begin{equation}
 		\begin{split}
-		\int_A dC &= \int_A \frac{\epsilon_0\,dA}{h_0-w(r)} \\
-							&= \int_0^{R_M}{\int_0^{2\pi}{\frac{\epsilon_0 r}{h_0-w(r)}\,d\theta\,dr}} \\
-						C &= \frac{\pi\epsilon_0 R_M^2}{w_0} \mathrm{ln}\left(\frac{h_0}{h_0-w_0}\right)
+		&\int_A dC = \int_A \frac{\epsilon_0\,dA}{h_0-w(r)} \\[0.75em]
+							= &\int_0^{R_M}{\int_0^{2\pi}{\frac{\epsilon_0 r}{h_0-w(r)}\,d\theta\,dr}} \\[0.75em]
+						C = &\frac{\epsilon_0\pi R_M^2}{w_0} \mathrm{ln}\left(\frac{h_0}{h_0-w_0}\right)
 		\end{split}
 		\label{eq:Capacitance}
 	\end{equation}
-	
+\end{figure}
+
+\begin{figure}[ht]
+	\centering	
 	\begin{tabular}{ c | l }
 		\hline
 		\bf Symbol & \bf Description \\
@@ -426,13 +435,17 @@ Setting residual stress $\sigma_0=0$, we can solve for the apex deflection $w_0$
 
 \subsection{Capacitance}
 
-Let the back-plate be held at $z=h_0$ away from the membrane to create the dielectric air-gap. Assume there is sound pressure and the membrane has a positive apex deflection $w_0>0$ so it is deflected towards the back-plate. If we treat the face of the membrane as a collection of cylindrical area differentials with $dA = r\,dr\,d\theta$ we can find the total capacitance under deflection by integrating the differential capacitances $dC$ as shown in Eq. \ref{eq:Capacitance}.
+Let the back-plate be held at $z=h_0$ away from the membrane to create the dielectric air-gap. When there is no deflection, the condenser has capacitance described by Eq. \ref{Cknot}.
+
+ Assume there is sound pressure and the membrane has a positive apex deflection $w_0>0$ so it is deflected towards the back-plate. If we treat the face of the membrane as a collection of differential parallel-plate capacitors with area $dA = r\,dr\,d\theta$, we can integrate to find the total capacitance as shown in Eq. \ref{eq:Capacitance}.
 
 %Negative apex deflection $w_0<0$ indicates deflection \emph{away} from the back-plate and produces the expression $h_0+|w_0|$ in the denominator of the natural logarithm.
 
 \section{Interface Circuit}
 
 The interface circuit is the portion of the design responsible for converting variations in capacitance across the condenser into a low impedance voltage signal. It does so in two steps, as shown in Fig. \ref{fig:SignalChain}. First the AC small-signal is extracted to obtain a high output impedance voltage signal using the coupling circuit in Fig. \ref{fig:CouplingCircuit}. This signal is then transformed into a low output impedance voltage signal using a preamplifier. The final signal can be sent much longer distances without noticeable degradation.\supercite{bruel}
+
+
 
 % An example of a floating figure using the graphicx package.
 % Note that \label must occur AFTER (or within) \caption.
